// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing SearchModal component Should render no results found if there are no results 1`] = `
<SearchModal
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <styled.div
    onClick={[Function]}
  >
    <div
      className="sc-dlfnbm iVzSdZ"
      onClick={[Function]}
    >
      <styled.div>
        <div
          className="sc-bdfBwQ kanTOC"
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "color": "white",
                "display": "flex",
                "height": "100%",
                "justifyContent": "center",
              }
            }
          >
            <h1
              style={
                Object {
                  "margin": "0",
                }
              }
            >
              No results found
            </h1>
          </div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</SearchModal>
`;

exports[`Testing SearchModal component Testing component with search results Should match snapshot 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <SearchModal
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <styled.div
        onClick={[Function]}
      >
        <div
          className="sc-dlfnbm iVzSdZ"
          onClick={[Function]}
        >
          <styled.div>
            <div
              className="sc-bdfBwQ kanTOC"
            >
              <Styled(Link)
                key="TSLA"
                onClick={[Function]}
                to="/details/tsla"
              >
                <Link
                  className="sc-gsTCUz gKMLZQ"
                  onClick={[Function]}
                  to="/details/tsla"
                >
                  <LinkAnchor
                    className="sc-gsTCUz gKMLZQ"
                    href="/details/tsla"
                    navigate={[Function]}
                    onClick={[Function]}
                  >
                    <a
                      className="sc-gsTCUz gKMLZQ"
                      href="/details/tsla"
                      onClick={[Function]}
                    >
                      <h1>
                        TSLA
                      </h1>
                      <h1>
                        NASDAQ
                      </h1>
                    </a>
                  </LinkAnchor>
                </Link>
              </Styled(Link)>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </SearchModal>
  </Router>
</BrowserRouter>
`;
